--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
     {{>header}}
     <p>Created by : {{name}}</p>
+    <p>This website uses data from mapbox.com and darksky.net</p>
     <img class="portrait" src="{{image}}" alt="" />
     </div>
     {{>footer}}
